# rpg_quadrotor_control

control/autopilot/: CMakeLists.txt
trajectory_planning/polynomial_trajectories/: CMakeLists.txt
trajectory_planning/polynomial_trajectories/include/polynomial_trajectories/: polynomial_trajectory.h
trajectory_planning/polynomial_trajectories/src/: minimum_snap_trajectories.cpp  polynomial_trajectory.cpp
